--- a/zz.html
+++ b/zz.html
@@ -18,12 +18,12 @@
 	<a href="mailto:603463175@qq.com">发邮件</a>
 	<h1>页内链接</h1>
 	<p>额外的链接<p>
-	<a href="http://www.nop.com"target="_blank">猫扑</a>
+	<a href="http://www.mop.com"target="_blank">猫扑</a>
 
 	<h1>热区链接</h1>
 	<img src="http://www.33.la/uploads/201404bz/02/3322.jpg" alt="" usemap="#Map1">
 	<map name="Map1">
-		<area shape="circle" coords="156,124,121" href="http://www.nop.com" alt="">
+		<area shape="circle" coords="156,124,121" href="http://www.mop.com" alt="">
 	</map>
 
 </body>
