--- a/da.html
+++ b/da.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 	<iframe src="http://www.sogou.com" frameborder="0"width="100%"></iframe>
-    <embed  src="郑大强/song.mp3"controls="controls">
+    <embed  src="daqiang/song.mp3"controls="controls">
     </embed>
-	<embed src="郑大强/movie.mp4"type="">
+	<embed src="daqiang/movie.mp4"type="">
 	
 	</embed>	
 </body>
