--- a/sougou3.html
+++ b/sougou3.html
@@ -302,63 +302,63 @@
                 </a>
               </div>
               <div class="info">
-                <a href="http://pinyin.sogou.com/skins/detail/view/info/525236?rf=idx_catoon_xbqt_1&tf=w" class="title">龙珠·悟空</a>
-                <a href="http://download.pinyin.sogou.com/skins/download.php?skin_id=524406&f=idxb1&f=indexfirst&_rf=pyindex_dl_1" class="download"></a>
+                <a href="http://pinyin.sogou.com/skins/detail/view/info/525236?rf=idx_catoon_xbqt_1tf=w" class="title">龙珠·悟空</a>
+                <a href="http://download.pinyin.sogou.com/skins/download.php?skin_id=524406f=idxb1f=indexfirst_rf=pyindex_dl_1" class="download"></a>
               </div>
             </li>
             <li>
               <div class="img">
-                <a href="http://pinyin.sogou.com/skins/detail/view/info/524719?rf=idx_catoon_xbqt_2&tf=p">
+                <a href="http://pinyin.sogou.com/skins/detail/view/info/524719?rf=idx_catoon_xbqt_2tf=p">
                   <img src="http://dl.pinyin.sogou.com/cache/skins/uploadImage/2016/05/18/14635676962289_former.jpg" alt="">
                 </a>
               </div>
               <div class="info">
-                <a href="http://pinyin.sogou.com/skins/detail/view/info/524719?rf=idx_catoon_xbqt_2&tf=w" class="title">十年一品温如言</a>
-                <a href="http://download.pinyin.sogou.com/skins/download.php?skin_id=524406&f=idxb1&f=indexfirst&_rf=pyindex_dl_1" class="download"></a>
+                <a href="http://pinyin.sogou.com/skins/detail/view/info/524719?rf=idx_catoon_xbqt_2tf=w" class="title">十年一品温如言</a>
+                <a href="http://download.pinyin.sogou.com/skins/download.php?skin_id=524406f=idxb1f=indexfirst_rf=pyindex_dl_1" class="download"></a>
               </div>
             </li>
             <li>
               <div class="img">
-                <a href="http://pinyin.sogou.com/skins/detail/view/info/525370?rf=idx_star_xbqt_5&tf=p">
+                <a href="http://pinyin.sogou.com/skins/detail/view/info/525370?rf=idx_star_xbqt_5tf=p">
                   <img src="http://dl.pinyin.sogou.com/cache/skins/uploadImage/2016/05/27/14643138519755_former.png" alt="">
                 </a>
               </div>
               <div class="info">
-                <a href="http://pinyin.sogou.com/skins/detail/view/info/525370?rf=idx_star_xbqt_5&tf=w" class="title">权利的游戏之家族徽章</a>
-                <a href="http://download.pinyin.sogou.com/skins/download.php?skin_id=524406&f=idxb1&f=indexfirst&_rf=pyindex_dl_1" class="download"></a>
+                <a href="http://pinyin.sogou.com/skins/detail/view/info/525370?rf=idx_star_xbqt_5tf=w" class="title">权利的游戏之家族徽章</a>
+                <a href="http://download.pinyin.sogou.com/skins/download.php?skin_id=524406f=idxb1f=indexfirst_rf=pyindex_dl_1" class="download"></a>
               </div>
             </li>
             <li>
               <div class="img">
-                <a href="http://pinyin.sogou.com/skins/detail/view/info/525058?rf=idx_star_xbqt_3&tf=p">
+                <a href="http://pinyin.sogou.com/skins/detail/view/info/525058?rf=idx_star_xbqt_3tf=p">
                   <img src="http://dl.pinyin.sogou.com/cache/skins/uploadImage/2016/05/23/14639777392634_former.jpg" alt="">
                 </a>
               </div>
               <div class="info">
-                <a href="http://pinyin.sogou.com/skins/detail/view/info/525058?rf=idx_star_xbqt_3&tf=w" class="title">G-Dragon【韩际新世界代言】I</a>
-                <a href="http://download.pinyin.sogou.com/skins/download.php?skin_id=524406&f=idxb1&f=indexfirst&_rf=pyindex_dl_1" class="download"></a>
+                <a href="http://pinyin.sogou.com/skins/detail/view/info/525058?rf=idx_star_xbqt_3tf=w" class="title">G-Dragon【韩际新世界代言】I</a>
+                <a href="http://download.pinyin.sogou.com/skins/download.php?skin_id=524406f=idxb1f=indexfirst_rf=pyindex_dl_1" class="download"></a>
               </div>
             </li>
             <li>
               <div class="img">
-                <a href="http://pinyin.sogou.com/skins/detail/view/info/525322?rf=idx_xbqt_xbqt_4&tf=p">
+                <a href="http://pinyin.sogou.com/skins/detail/view/info/525322?rf=idx_xbqt_xbqt_4tf=p">
                   <img src="http://dl.pinyin.sogou.com/cache/skins/uploadImage/2016/05/26/14642509876974_former.jpg" alt="">
                 </a>
               </div>
               <div class="info">
-                <a href="http://pinyin.sogou.com/skins/detail/view/info/525322?rf=idx_xbqt_xbqt_4&tf=w" class="title">【梦圆】猜猜喵是谁？</a>
-                <a href="http://download.pinyin.sogou.com/skins/download.php?skin_id=524406&f=idxb1&f=indexfirst&_rf=pyindex_dl_1" class="download"></a>
+                <a href="http://pinyin.sogou.com/skins/detail/view/info/525322?rf=idx_xbqt_xbqt_4tf=w" class="title">【梦圆】猜猜喵是谁？</a>
+                <a href="http://download.pinyin.sogou.com/skins/download.php?skin_id=524406f=idxb1f=indexfirst_rf=pyindex_dl_1" class="download"></a>
               </div>
             </li>
             <li>
               <div class="img">
-                <a href="http://pinyin.sogou.com/skins/detail/view/info/525302?rf=idx_xbqt_xbqt_5&tf=p">
+                <a href="http://pinyin.sogou.com/skins/detail/view/info/525302?rf=idx_xbqt_xbqt_5tf=p">
                   <img src="http://dl.pinyin.sogou.com/cache/skins/uploadImage/2016/05/26/14642466402825_former.jpg" alt="">
                 </a>
               </div>
               <div class="info">
-                <a href="http://pinyin.sogou.com/skins/detail/view/info/525302?rf=idx_xbqt_xbqt_5&tf=w" class="title">睡了吗？摘颗星星给你4</a>
-                <a href="http://download.pinyin.sogou.com/skins/download.php?skin_id=524406&f=idxb1&f=indexfirst&_rf=pyindex_dl_1" class="download"></a>
+                <a href="http://pinyin.sogou.com/skins/detail/view/info/525302?rf=idx_xbqt_xbqt_5tf=w" class="title">睡了吗？摘颗星星给你4</a>
+                <a href="http://download.pinyin.sogou.com/skins/download.php?skin_id=524406f=idxb1f=indexfirst_rf=pyindex_dl_1" class="download"></a>
               </div>
             </li>
           </ul>
@@ -373,7 +373,7 @@
                 </a>
               </div>
               <div class="info">
-                <a href="http://download.pinyin.sogou.com/skins/download.php?skin_id=524406&f=idxb1&f=indexfirst&_rf=pyindex_dl_1" class="download"></a>
+                <a href="http://download.pinyin.sogou.com/skins/download.php?skin_id=524406f=idxb1f=indexfirst_rf=pyindex_dl_1" class="download"></a>
               </div>
             </li>
             <li>
@@ -383,7 +383,7 @@
                 </a>
               </div>
               <div class="info">
-                <a href="http://download.pinyin.sogou.com/skins/download.php?skin_id=524406&f=idxb1&f=indexfirst&_rf=pyindex_dl_1" class="download"></a>
+                <a href="http://download.pinyin.sogou.com/skins/download.php?skin_id=524406f=idxb1f=indexfirst_rf=pyindex_dl_1" class="download"></a>
               </div>
             </li>
             <li>
@@ -393,7 +393,7 @@
                 </a>
               </div>
               <div class="info">
-                <a href="http://download.pinyin.sogou.com/skins/download.php?skin_id=524406&f=idxb1&f=indexfirst&_rf=pyindex_dl_1" class="download"></a>
+                <a href="http://download.pinyin.sogou.com/skins/download.php?skin_id=524406f=idxb1f=indexfirst_rf=pyindex_dl_1" class="download"></a>
               </div>
             </li>
             <li>
@@ -403,7 +403,7 @@
                 </a>
               </div>
               <div class="info">
-                <a href="http://download.pinyin.sogou.com/skins/download.php?skin_id=524406&f=idxb1&f=indexfirst&_rf=pyindex_dl_1" class="download"></a>
+                <a href="http://download.pinyin.sogou.com/skins/download.php?skin_id=524406f=idxb1f=indexfirst_rf=pyindex_dl_1" class="download"></a>
               </div>
             </li>
             <li>
@@ -413,7 +413,7 @@
                 </a>
               </div>
               <div class="info">
-                <a href="http://download.pinyin.sogou.com/skins/download.php?skin_id=524406&f=idxb1&f=indexfirst&_rf=pyindex_dl_1" class="download"></a>
+                <a href="http://download.pinyin.sogou.com/skins/download.php?skin_id=524406f=idxb1f=indexfirst_rf=pyindex_dl_1" class="download"></a>
               </div>
             </li>
             <li>
@@ -423,7 +423,7 @@
                 </a>
               </div>
               <div class="info">
-                <a href="http://download.pinyin.sogou.com/skins/download.php?skin_id=524406&f=idxb1&f=indexfirst&_rf=pyindex_dl_1" class="download"></a>
+                <a href="http://download.pinyin.sogou.com/skins/download.php?skin_id=524406f=idxb1f=indexfirst_rf=pyindex_dl_1" class="download"></a>
               </div>
             </li>
           </ul>
